integration_tests/juniper_tests/fail/union/impl_enum_field.stderr
error[E0277]: the trait bound `Test: juniper::types::marker::GraphQLObjectType<juniper::value::scalar::DefaultScalarValue>` is not satisfied
  --> $DIR/impl_enum_field.rs:12:1
   |
12 | #[juniper::graphql_union]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `juniper::types::marker::GraphQLObjectType<juniper::value::scalar::DefaultScalarValue>` is not implemented for `Test`
   |
   = note: required by `juniper::types::marker::GraphQLObjectType::name`
